# akgentic-catalog

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli-usage-guide.md
examples/: 01-catalog-entries.md  01_catalog_entries.py  02-agent-entries.md  02_agent_entries.py  03-team-entries.md  03-team-specs.md  03_team_entries.py  03_team_specs.py  04-yaml-persistence.md  04_yaml_persistence.py  05-catalog-wiring.md  05_catalog_wiring.py  06-search-and-query.md  06_search_and_query.py  07-python-first.md  07_python_first.py  08-custom-types.md  08_custom_types.py  README.md
examples-v1-archived/: 01-catalog-entries.md  01_catalog_entries.py  03-team-entries.md  03_team_entries.py  04-yaml-persistence.md  04_yaml_persistence.py  05-catalog-wiring.md  06-search-and-query.md  08-custom-types.md  README.md
src/akgentic/: __init__.py
tests/: __init__.py  conftest.py  helpers.py  test_agent_catalog.py  test_agent_entry.py  test_env.py  test_extract_config_type.py  test_public_api.py  test_refs.py  test_team_catalog.py  test_team_spec.py  test_template_catalog.py  test_tool_catalog.py  test_tool_entry.py  test_yaml_agent_repo.py  test_yaml_team_repo.py  test_yaml_template_repo.py  test_yaml_tool_repo.py
tests/api/: conftest.py  test_agent_router.py  test_app.py  test_app_postgres.py  test_app_postgres_no_extra.py  test_router_body_formats.py  test_team_router.py  test_template_router.py  test_tool_router.py
tests/cli/: conftest.py  test_agent_cmd.py  test_backend_selection.py  test_cli_postgres.py  test_import_cmd.py  test_import_guard.py  (+6 more)
(+166 files in other folders)
